# gdac

./: .agentic_hooks.json  .gitignore  README.md  agentic_coder_claude_code_style_model_switchable.py  agentic_coder_claude_code_style_model_switchable_rev2.py  pyproject.toml
.agentic_memory/: session_1756098149.json
agentic_coder/: __init__.py  ascii_art.py  cli.py  commands.py  config.py  enhanced_ui.py  github_actions.py  hooks.py  llm_registry.py  mcp.py  memory.py  models.json  planner.py  repl.py  rich_ui.py  runtime.py  sessions.py  terminal_detect.py  textual_ui.py
agentic_coder/assets/: README.md
agentic_coder/tools/: __init__.py  ast_parser.py  filesystem.py  format.py  git_tools.py  grep_replace.py  line_edit.py  packages.py  patch.py  repo_map.py  shell.py  tests.py  tree.py  web_io.py
prompts/: AGENT.md
scripts/: update_models.py
tests/: test_agentic_coder.py
