[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-coder"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.44.0",
  "tokenizers>=0.19.0",
  "accelerate>=0.33.0",
  "huggingface_hub>=0.24.0",
  "datasets>=2.19.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
  "unidiff>=0.7.5",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "anthropic>=0.34.0",
]

[project.scripts]
agentic-coder = "agentic_coder.cli:app"